<resources>
    <string name="app_name">ChatAppDemoTwo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter">Enter</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="username">Username</string>
    <string name="chats_and_videos">Chats and videos</string>
    <string name="group_chats_and_videos">Group chats and videos</string>
    <string name="myname">MyName</string>
    <string name="vs">vs</string>
    <string name="friendname">FriendName</string>
    <string name="group">GROUP</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="start_typing">Start typing…</string>
    <string name="some_message">Some message</string>
    <string name="point">.</string>
</resources>